--- a/day 3/style.css
+++ b/day 3/style.css
@@ -48,6 +48,11 @@ body {
     border: 0;
     font-size: 26px;
     color: #fff;
+    cursor: pointer;
+}
+
+.container.show-nav .circle {
+    transform: rotate(-70deg);
 }
 
 .circle button:focus {
@@ -66,4 +71,62 @@ body {
 
 .content img {
     max-width: 100%;
+}
+
+.content {
+    max-width: 1000px;
+    margin: 50px auto;
+}
+
+.content h1 {
+    margin: 0;
+}
+
+.content small {
+    color: #555;
+    font-style: italic;
+}
+
+.content p {
+    color: #333;
+    line-height: 1.5;
+}
+
+nav {
+    position: fixed;
+    bottom: 40px;
+    left: 0;
+    z-index: 100;
+}
+
+nav ul {
+    list-style-type: none;
+}
+
+nav ul li {
+    text-transform: uppercase;
+    color: #fff;
+    margin: 40px 0;
+    transform: translateX(-100%);
+    transition: transform 0.4s ease-in;
+}
+
+nav ul li+li {
+    margin-left: 15px;
+    transform: translateX(-150%);
+}
+
+nav li+li+li {
+    margin-left: 30px;
+    transform: translateX(-200%);
+}
+
+nav li i {
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.container.show-nav+nav li {
+    transform: translateX(0);
+    transition-delay: 0.3s;
 }
