--- a/day 4/style.css
+++ b/day 4/style.css
@@ -26,7 +26,7 @@ body {
     padding: 15px;
     height: 50px;
     width: 50px;
-    transition: width 0.3 ease;
+    transition: width 0.3s ease;
 }
 
 .btn {
