--- a/day 9/style.css
+++ b/day 9/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    background-color: #2c3e50;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,6 +14,46 @@ body {
     margin: 0;
 }
 
-.span1 {
-    width: 300px;
+.kinetic{
+    position: relative;
+    height: 80px;
+    width: 80px;
+}
+
+.kinetic::after, .kinetic::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border: 50px solid transparent;
+    border-bottom-color: #fff;
+    animation: rotateA 2s linear infinite 0.5s;
+}
+.kinetic::before{
+    transform: rotate(90deg);
+    animation: rotateB 2s linear infinite;
+}
+@keyframes rotateA{
+    0%,25%{
+        transform: rotate(0deg);
+    }
+    50%,75%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotateB{
+    0%,25%{
+        transform: rotate(90deg);
+    }
+    50%,75%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(450deg);
+    }
 }
